[project]
name = "python-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "pdf2image>=1.17.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "pytube>=15.0.0",
    "requests>=2.32.3",
    "selenium>=4.32.0",
    "youtube-transcript-api>=1.0.3",
]

[tool.uv.workspace]
members = [
    "ocr",
]
